Kubernetes/YAML/Demo/demo2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default 
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30008
  selector:
    app: nginx
